# smart-retail-patrol-bot

./: README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  requirements.txt
odom_fusion/: CMakeLists.txt  package.xml  setup.cfg  setup.py
odom_fusion/config/: ekf.yaml
odom_fusion/launch/: ekf.launch.py
patrol_manager/: CMakeLists.txt  package.xml  setup.py
patrol_manager/patrol_manager/: patrol_manager_node.py
smart_retail_bringup/: CMakeLists.txt  package.xml
smart_retail_bringup/launch/: retail_patrol.launch.py
smart_retail_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
smart_retail_perception/smart_retail_perception/: perception_node.py
