<?xml version="1.0"?>
<package format="3">
  <name>smart_retail_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for Smart Retail Patrol Bot</description>
  <maintainer email="rakeshrapaka@gmail.com">Rakesh Rapaka</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_cmake</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
