<?xml version="1.0"?>
<package format="3">
  <name>smart_retail_perception</name>
  <version>0.0.1</version>
  <description>Human detection for Smart Retail Patrol Bot</description>
  <maintainer email="you@example.com">Rakesh</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>
</package>
